Fix alignment of the version picker element

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -783,7 +783,7 @@ body.drag {
   .version-picker {
     &:extend(.flex);
     margin-bottom: 15px;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
 
     em {
